# regional_dashboard

./: MANIFEST.in  pyproject.toml  setup.py
regional_dashboard/: hooks.py  install.py  modules.txt
regional_dashboard/public/js/: sales_target_achievement.js
regional_dashboard/regional_dashboard/report/regional_dashboard/: regional_dashboard.js  regional_dashboard.json  regional_dashboard.py
regional_dashboard/report/regional_dashboard/: regional_dashboard.json  regional_dashboard.py
regional_dashboard/selling/report/regional_dashboard/: regional_dashboard.json  regional_dashboard.py
